implement controller and map-struct
